fix background overflow

--- a/src/app/component/app/app.component.css
+++ b/src/app/component/app/app.component.css
@@ -2,7 +2,6 @@
     margin-top: 120px;
     position: absolute;
     border-radius: 16px;
-    width: 80%; /* Ajustez cette largeur selon vos besoins */
     left: 50%; /* Positionne l'élément au centre */
     transform: translateX(-50%); /* Centre réellement l'élément horizontalement */
 }
