--- a/src/app/component/layout/navbar/navbar.component.css
+++ b/src/app/component/layout/navbar/navbar.component.css
@@ -10,6 +10,7 @@
     margin: 20px;
     border-radius: 16px;
     pad: 0.5rem;
+    border: 1px solid lightgrey;
 }
 
 .login-button {
