--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 html {
-background: url(https://png.pngtree.com/thumb_back/fh260/background/20240418/pngtree-payroll-overtime-binder-data-finance-report-business-with-graph-analysis-in-image_15659967.jpg);
+   background: url(https://png.pngtree.com/thumb_back/fh260/background/20240418/pngtree-payroll-overtime-binder-data-finance-report-business-with-graph-analysis-in-image_15659967.jpg);
    background-size: cover;
    width: 100%;
    height: 100vh;
+   background-repeat: no-repeat; 
+   background-size: cover; 
+   background-attachment: fixed; 
+   background-position: center; 
 }
 
 html::before{
     background-color: rgba(0,0,0,0.6);
     content: "";
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
